--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "classnames": "^2.3.2",
+    "firebase": "^9.21.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/react-icons": "^3.0.0"
   }
 }
